--- a/main.html
+++ b/main.html
@@ -8,6 +8,31 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>My Playlist</h1>
+	<div class="playlist">
+      <ul>
+        <li style="list-style-type: none;"><a href="song1.mp3" target="_blank">Believer</a></li>
+        <li style="list-style-type: none;"><a href="song1.mp3" target="_blank">Senorita</a></li>
+        <li style="list-style-type: none;"><a href="song1.mp3" target="_blank">Fire for You</a></li>
+		<li style="list-style-type: none;"><a href="song1.mp3" target="_blank">Attention</a></li>
+		<li style="list-style-type: none;"><a href="song1.mp3" target="_blank">Samjho Na</a></li>
+	 </ul>
+	</div>
+	<h2>Now Playing...</h2>
+	<div class="player_one">
+	
+     <video controls>
+	  <source src="#" type="vodeo/mp4">
+	 </video>
+	
+	<h2>MP3 songs</h2>
+	<div class="player_two">
+	  Maan Meri Jaan
+     <audio controls>
+	  <source src="#" type="mp3">
+	 </audio>
+	</div>
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
